# langgraph-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  eval.yml
app/: api.py  chat_service.py  config.py  debug_ui.html  env.py  graph.py  llm.py  main.py  rag.py  runtime_context.py  state.py  streaming.py  tracing.py
app/agents/: chat_agent.py  merge.py  novel_script_agent.py  rag_agent.py  supervisor.py  tool_agent.py
app/api/: __init__.py  app.py  chat_runner.py  routes.py  schemas.py  session_store.py  streaming.py
app/checkpointing/: __init__.py  factory.py
app/chunking/: __init__.py  chunker.py  models.py
app/constants/: __init__.py  keywords.py  knowledge.py  model_profiles.py  policies.py  retrieval.py  routes.py  runtime.py  tags.py  tooling.py
app/knowledge/: README.md  __init__.py  catalog.py  chunk_inspector.py  ingestion.py  management.py  rechunk_preview.py  search_inspector.py
app/llm/: __init__.py  _helpers.py  caching.py  chat.py  embedding.py  providers.py  retry.py
app/memory/: README.md  conversation_history.py  node_services.py  vector_memory.py  write_policy.py
app/nodes/: memory.py
app/prompts/: __init__.py  chat.py  core.py  creative.py  merge.py  rag.py  routing.py  story.py  tooling.py
app/retrieval/: doc_retrieval.py  embedder.py  embedding_store.py  reranker.py
app/runtime/: README.md  __init__.py  checkpoint_store.py  initial_state.py  session_backend.py  session_cache.py  session_runtime.py  snapshot.py
app/tools/: tools.py
app/utils/: errors.py  logger.py  memory_key.py  tags.py
app/vector_store/: __init__.py  chroma_client.py  chroma_store.py
docs/: memory-architecture.md  runtime-state.md
outputs/: baseline.csv  baseline.json
outputs/eval_runs/: 20260416-165250-baseline.csv  20260416-165250-baseline.json  20260416-165321-balanced.csv  20260416-165321-balanced.json  20260416-165321-balanced.manifest.json  20260416-165919-baseline.csv  20260416-165919-baseline.json  20260416-165919-baseline.manifest.json  20260416-170022-concise.csv  20260416-170022-concise.json  (+162 more)
scripts/: backup.sh  backup_docker_volume.sh  build_doc_chroma_index.py  build_doc_embeddings.py  build_knowledge_index.py  clear_conversation_history.py  compare_eval_runs.py  eval_cases.json  eval_chat.py  eval_profiles.json  inspect_chroma_collection.py  inspect_conversation_history.py  inspect_knowledge_chunks.py  inspect_retrieval.py  migrate_conversation_history_jsonl_to_sqlite.py  migrate_memory_json_to_chroma.py  preview_rechunk.py  restore.sh  restore_docker_volume.sh  run_eval_profile.py  scratch_test.py  smoke_docker.sh
tests/: conftest.py  test_api_chat.py  test_chat_answer.py  test_chunk_inspector.py  test_chunking.py  test_e2e_graph.py  test_eval_chat.py  test_health.py  test_knowledge_catalog.py  test_knowledge_ingestion.py  test_knowledge_management.py  test_lexical_tokenizer.py  test_llm_stub.py  test_memory_node.py  test_novel_script_agent.py  test_rag_agent.py  test_rag_citations.py  test_rag_pipelines.py  test_rag_pure.py  test_rag_query_classifier.py  test_rechunk_preview.py  test_reranker.py  test_retrieval_doc.py  test_search_inspector.py  test_session_runtime.py  test_supervisor.py  test_tool_agent.py
(+63 files in other folders)
